assets/sass/components/thank-with-google/_googlesitekit-twg-color-radio.scss
/**
 * Site Kit by Google, Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

.googlesitekit-plugin {

	.googlesitekit-twg-color-radio__options {
		display: flex;
		flex-wrap: wrap;

		.googlesitekit-image-radio {
			width: fit-content;

			.image-radio .mdc-image-radio__background {

				.mdc-image-radio__content {
					border-radius: 50%;
					border-width: 3.5px;
					height: 43px;
					min-height: 0;
					outline: none;
					overflow: hidden;
					position: relative;
					width: 43px;

					svg {
						height: 50px;
						left: 50%;
						position: absolute;
						top: 50%;
						transform: translate(-50%, -50%);
						width: 50px;
					}
				}

				.mdc-image-radio__content[aria-checked="true"] {
					outline: 0.1875rem solid;
				}

				&[aria-checked="true"] {
					border: 0.25rem solid $c-surfaces-surface;
				}
			}

			> label {
				margin-right: 0;
			}
		}
	}
}

